--- a/src/App.css
+++ b/src/App.css
@@ -12,9 +12,19 @@ body, .app {
 
 /* main page */
 
-.list-books-title {
+.list-books-header {
   padding: 10px 0;
   background: #2e7c31;
+  position: relative;
+}
+
+.list-books-header a {
+  position: absolute;
+  right: 10px;
+  top: 22px;
+}
+
+.list-books-title {
   text-align: center;
 }
 
@@ -105,6 +115,7 @@ body, .app {
   width: 50px;
   height: 53px;
   background-image: url('./icons/arrow-back.svg');
+  background-color: #dedede;
   background-position: center;
   background-repeat: no-repeat;
   background-size: 28px;
